[metadata]
name = lgbsttracker
version = 0.0.1
author = Py4mac
author_email = boisbu@gmail.com
description = Lego Boost Tracker
url = https://github.com/py4mac/lgbsttracker
# keywords =
classifiers =
  Development Status :: 5 - Beta
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
  click
  sanic
  querystring_parser
  grpcio
  grpcio-tools
  google-api
  google-api-core
  requests
  confluent-kafka
  prometheus-client
  sqlalchemy
  cassandra-driver
  databases[postgresql]

[options.extras_require]
tests =
  tox
  pytest
  pytest-cov
  coveralls
lint =
  black
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

doc =
  mkdocs
  mkdocs-material
  markdown-include

# [build_sphinx]
# project = 'strada.core'
# version = 1.2
# release = 1.2.0
# source-dir = doc/source
